--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -6,9 +6,6 @@
   <div class="table">
     <table class="list">
     <tr>
- 	<th class="full" colspan="2">User</th>
-    </tr>
-    <tr>
 	<td class="first" width="120"><strong><%=_("Full Name")%></strong></td>
 	<td class="last"><%= f.text_field :full_name %></td>
     </tr>
@@ -17,7 +14,7 @@
 	<td class="last"><%= f.text_field :grp_string %></td>
     </tr>
     <tr>
-	<td class="first"><strong><%=_("Default Group")%></strong></td>
+	<td class="first"><strong><%=_("Default Group (GID)")%></strong></td>
 	<td class="last"><%= f.text_field :default_group %></td>
     </tr>
     <tr class="bg">
