--- a/plugins/users/app/views/users/exportssh.html.erb
+++ b/plugins/users/app/views/users/exportssh.html.erb
@@ -17,9 +17,9 @@
     </tr>
     <tr>
 	<td class="first"><strong><%=_("SHH Key")%></strong></td>
-	<td class="last"><%= f.text_field :sshkey, :disabled=>!@permissions[:write] %></td>
+	<td class="last"><%= f.text_field :sshkey, :disabled=>!@permissions[:usermodify] %></td>
     </tr>
     </table>
-    <p><%= f.submit _("Export SSH-Key"), :commit=>"Export SSH-Key", :onclick=>"Element.show('progress')", :disabled=>!@permissions[:write] %><%= link_to _('Back'), users_path, :onclick=>"Element.show('progress')", :class => "button" %></p>
+    <p><%= f.submit _("Export SSH-Key"), :commit=>"Export SSH-Key", :onclick=>"Element.show('progress')", :disabled=>!@permissions[:usermodify] %><%= link_to _('Back'), users_path, :onclick=>"Element.show('progress')", :class => "button" %></p>
   </div>
 <% end %>
