--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
     <th class="first" width=150><%=_("Login")%></th>
     <th><%=_("Full Name")%></th>
     <th width=8%><%= label_edit %></th>
-    <% if @permissions[:delete] %>
+    <% if @permissions[:userdelete] %>
     <th width=8%><%=_("SSH-Key")%></th>
     <th class="last" width=8%><%= label_delete %></th>
     <% else %>
@@ -18,14 +18,14 @@
     <td><%=h user.full_name %></td>
     <td><%= html_edit_link(user.id) %></td>
     <td><%= link_to image_tag("/images/key_add.png", :alt =>  "key"), exportssh_user_path(:id=>user.id), :onclick=>"Element.show('progress')" %></td>
-    <% if @permissions[:delete] %>
+    <% if @permissions[:userdelete] %>
     <td class="last"><%= html_delete_link(user.login_name) %></td>
     <% end %>
   </tr>
   <% end %>
 </table>
 
-<% if @permissions[:write] %>
+<% if @permissions[:useradd] %>
 <div class="select">
   <%= link_to _("<strong>[New User]</strong>"), new_user_path, :onclick=>"Element.show('progress')" -%><p/>
 </div>
