patches module: * addded patch selection to the view (javascript),                 * removed show.rhtml

--- a/plugins/patch_updates/app/views/patch_updates/_patches.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/_patches.html.erb
@@ -1,31 +1,21 @@
-<% if @patch_updates.empty? %>
-<p><%= _("Your system is up to date.") %></p>
-<% else %>
-<p><%= _("Updates available") %></p>
-<% end %>
-<% form_tag '/patch_updates/install' do %>
-   <table class="list" <%= @patch_updates.empty? ? "style=\"visibility: hidden;\"" : "" %> >
+<table class="patches" <%= @patch_updates.empty? ? "style=\"visibility: hidden;\"" : "" %> >
       <tr>
- <th class="first" width=5%><%=_("Check")%></th>
+        <th class="first" width=5%><%=_("Check")%></th>
         <th width=8%><%=_("Kind")%></th>
-	<th width=15%><%=_("Name")%></th>
-	<th width="100"><%=_("Summary")%></th>
-        <% if @proxy.permissions[:install] %>
+	    <th width=15%><%=_("Name")%></th>
+	    <th width="100"><%=_("Summary")%></th>
+        <% if @install_permission == nil %>
            <th width=15%><%=_("Source")%></th>
            <th class="last" width=5%><%=_("Install")%></th>
         <% else %>
            <th class="last" width=15%><%=_("Source")%></th>
         <% end %>
       </tr>
+
       <% counter=0 %>
       <% for patch_update in @patch_updates %>
-            <% if counter.modulo(2) == 0 %>
-             <tr>
-            <% else %>
-             <tr class="bg">
-            <% end %>
-            <% counter += 1 %>
-              <input type="checkbox" name=<%="patch_#{counter}"%> value=<%=patch_update.resolvable_id%> >
+          <tr id=<%="row_#{counter}"%> >
+            <td><input type="checkbox" id=<%= "#{counter}" %> name=<%="#{patch_update.kind}_#{counter}"%> value=<%=patch_update.resolvable_id%> ></td>
               <%
                  # this should go to a helper?
                  kinds = { "security" => '/icons/kupdateapplet_red.png',
@@ -34,7 +24,7 @@
                            "optional" => '/icons/kupdateapplet_optional.png' }
               %>
               <% if kinds.has_key?(patch_update.kind) %>
-                  <td class="icon"><%= image_tag(kinds[patch_update.kind]) %></td>
+                  <td class="icon" name=<%= patch_update.kind %> <%= image_tag(kinds[patch_update.kind]) %> </td>
               <% else %>
                   <td><%=h patch_update.kind %></td>
               <% end %>
@@ -42,14 +32,15 @@
               <td class="label"><%=h patch_update.name %></td>
               <td class="label"><%=h patch_update.summary %></td>
               <td><%=h patch_update.repo %></td>
-              <% if @proxy.permissions[:install] %>
+              <% if @install_permission.nil? %>
                  <td><%= link_to image_tag("/icons/system-software-install.png"\
                          , :alt =>  "install", :class=>"icon", :border => "0"),\
                          :controller => 'patch_updates', :id => patch_update.resolvable_id,\
                          :onclick=>"Element.show('progress')", :method => :post, :action => "install" %></td>
               <% end %>
-           </tr>
+          </tr>
+        <% counter += 1 %>
       <% end %>
-   </table>
-  <%= submit_tag _("Save"), :onclick=>"Element.show('progress')", :class => 'button' -%>
-<%end%>
+    <tr><td><input type="hidden" id="counter" name="counter" value=<%= "#{counter}" %> ></input></td></tr>
+  </table>
+
