added config icon

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -8,7 +8,7 @@
 </div>
 
 <div id="favorites">
-<h3>Configuration</h3>
+<h3><img src="/images/yast-config.png" alt="" height="23" width="23" border="0"> Configuration</h3>
 <% @shortcuts.each do |name, data| %>
    <div class="launcher">
      <% logger.debug data.inspect %>
