--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -1,5 +1,5 @@
 
-<h3><img src="/images/monitoring.png" alt="" height="23" width="23" border="0"> Status</h3>
+<h3><img src="/images/monitoring.png" alt="" height="23" width="23" border="0"> <%= _("Status") %></h3>
 
 <div id="status_patches_icon">
    <img src= <%=@img%> alt="" height="32" width="32" border="0">
@@ -12,11 +12,11 @@
    <img src="/images/button_ok.png" alt="" height="32" width="32" border="0">
 </div>
 <div id="status_health_msg">
-   <a href="">Your system is healthy.</a>
+   <a href=""><%= _("Your system is healthy.") %></a>
 </div>	
 
 <div id="favorites">
-<h3><img src="/images/yast-config.png" alt="" height="23" width="23" border="0"> Configuration</h3>
+<h3><img src="/images/yast-config.png" alt="" height="23" width="23" border="0"> <%= _("Configuration") %></h3>
 
 <% line_counter = 0 %>
 <% shortcuts_counter = 0 %>
@@ -47,7 +47,7 @@
 </div>
 
 <div class="content">
-  <a href="controlpanel/browse">Browse all config modules</a>
+  <a href="controlpanel/show_all"><%= _("Show all modules") %></a>
 </div>
 
 
