added for translation

--- a/webclient/app/views/controlpanel/show_all.rhtml
+++ b/webclient/app/views/controlpanel/show_all.rhtml
@@ -1,4 +1,4 @@
-<h2><img src="/images/yast-config.png" alt="" height="23" width="23" border="0"> Configuration</h2>
+<h2><img src="/images/yast-config.png" alt="" height="23" width="23" border="0"> <%= _("Configuration") %></h2>
 
 <% @shortcut_groups.each do |name, shortcuts| %>
   <h3><%= name %></h3>
