--- a/webclient/app/views/webservices/index.rhtml
+++ b/webclient/app/views/webservices/index.rhtml
@@ -1,7 +1,7 @@
 
 
 <div class="services-list">
-      <label for="#services-list">Systems list</label>
+      <label for="#services-list">Please choose a service:</label>
       <table id="services-list" class="list">
         <tbody>
           <% for webservice in @webservices %>
@@ -36,5 +36,4 @@
 </div>
 <!-- webservices list -->
 
-<a href="/" class="button"><%=_("Back")%></a>
 
