--- a/plugins/systemtime/app/views/system_time/index.rhtml
+++ b/plugins/systemtime/app/views/system_time/index.rhtml
@@ -1,4 +1,4 @@
-<%# javascript_include_tag "nogray_time_picker" %>
+<%= javascript_include_tag "nogray_time_picker" %>
 <% javascript_tag do -%>
   $(document).ready( function() {
   $(".datepicker").datepicker( { dateFormat: 'dd/mm/yy'} );
