--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1><%=_("Edit User %s") %@user.login_name %></h1>
+<h1><%=_("Edit User %s") %@user.uid%></h1>
 <br>
 
 <% disabled = ! @permissions[:usermodify] %>
@@ -13,7 +13,7 @@
     </tr>
     <tr>
 	<td class="first" width="120"><strong><%=_("Full Name")%></strong></td>
-	<td class="last"><%= f.text_field :full_name, :disabled => disabled %></td>
+	<td class="last"><%= f.text_field :cn , :disabled => disabled %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Groups")%></strong></td>
@@ -21,27 +21,27 @@
     </tr>
     <tr>
 	<td class="first"><strong><%=_("Default Group")%></strong></td>
-	<td class="last"><%= f.text_field :default_group, :disabled => disabled %></td>
+	<td class="last"><%= f.text_field :groupname, :disabled => disabled %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Home Directory")%></strong></td>
-	<td class="last"><%= f.text_field :home_directory, :disabled => disabled %></td>
+	<td class="last"><%= f.text_field :homeDirectory, :disabled => disabled %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("Login Shell")%></strong></td>
-	<td class="last"><%= f.text_field :login_shell, :disabled => disabled %></td>
+	<td class="last"><%= f.text_field :loginShell, :disabled => disabled %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Login Name")%></strong></td>
-	<td class="last"><%= f.text_field :login_name, :disabled => disabled %></td>
+	<td class="last"><%= f.text_field :uid, :disabled => disabled %></td>
     </tr>
     <tr>
-	<td class="first"><strong><%=_("UID")%></strong></td>
-	<td class="last"><%= f.text_field :uid, :disabled => disabled %></td>
+	<td class="first"><strong><%=_("UID Number")%></strong></td>
+	<td class="last"><%= f.text_field :uidNumber , :disabled => disabled %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Password")%></strong></td>
-	<td class="last"><%= f.text_field :password, :disabled => disabled %></td>
+	<td class="last"><%= f.text_field :userPassword, :disabled => disabled %></td>
     </tr>
     </table>
     <p><%= f.submit _("Update"), :disabled => disabled %><%= link_to _('Back'), users_path, :onclick=>"Element.show('progress')", :class => "button"%></p>
