--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
     <table class="list">
     <tr>
 	<td class="first" width="120"><strong><%=_("Full Name")%></strong></td>
-	<td class="last"><%= f.text_field :full_name %></td>
+	<td class="last"><%= f.text_field :cn %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Groups")%></strong></td>
@@ -15,11 +15,11 @@
     </tr>
     <tr>
 	<td class="first"><strong><%=_("Default Group (GID)")%></strong></td>
-	<td class="last"><%= f.text_field :default_group %></td>
+	<td class="last"><%= f.text_field :groupname %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Home Directory")%></strong></td>
-	<td class="last"><%= f.text_field :home_directory %></td>
+	<td class="last"><%= f.text_field :homeDirectory %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("do NOT create home directory")%></strong></td>
@@ -27,19 +27,19 @@
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Login Shell")%></strong></td>
-	<td class="last"><%= f.text_field :login_shell %></td>
+	<td class="last"><%= f.text_field :loginShell %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("Login Name")%></strong></td>
-	<td class="last"><%= f.text_field :login_name %></td>
+	<td class="last"><%= f.text_field :uid %></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong><%=_("UID")%></strong></td>
-	<td class="last"><%= f.text_field :uid %></td>
+	<td class="first"><strong><%=_("UID Number")%></strong></td>
+	<td class="last"><%= f.text_field :uidNumber %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("Password")%></strong></td>
-	<td class="last"><%= f.text_field :password %></td>
+	<td class="last"><%= f.text_field :userPassword %></td>
     </tr>
     </table>
     <p><%= f.submit _("Create"), :onclick=>"Element.show('progress')" %><%= link_to _('Back'), users_path, :onclick=>"Element.show('progress')", :class => "button" %></p>
