--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -8,7 +8,7 @@
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.query.js"></script>  
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.timers.js"></script>
-
+  <script type="text/javascript" language="javascript" charset="utf-8" src="/javascripts/jquery.jqplot.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.custom.js"></script>
 
   <!--<script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.jqModal.js"></script>
