Visually enhance notifications

--- a/webclient/public/stylesheets/yast.css
+++ b/webclient/public/stylesheets/yast.css
@@ -29,6 +29,11 @@ margin-left: 15.5em;
 margin-top: 10em;
 }
 
+.notifications {
+ font-size: 1.5em;
+ color: red;
+}
+
 #status_patches_icon  
 {
 margin-left: 2em;
