add summary for table for accesibility

--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -2,7 +2,7 @@
 <br/>
 
 <% form_tag '/language/commit_language' do -%>
-  <table summary=<%= _("This table gives language settings description and current value for it") %>>
+  <table summary="<%= _("This table gives language settings description and current value for it") %>">
   <tr><td colspan="2" class="full" align="center"><strong> <%=_("Settings")%></strong></td></tr>
   <tr>
     <td class="first"><%=_("First Language")%></td>
