Cope with missing patches proxy

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -2,10 +2,10 @@
 <h3><img src="/images/monitoring.png" alt="" height="23" width="23" border="0"> <%= _("Status") %></h3>
 
 <div id="status_patches_icon">
-   <img src= <%=@img%> alt="" height="32" width="32" border="0">
+   <img src= <%=@update_image%> alt="" height="32" width="32" border="0">
 </div>
 <div id="status_patches_msg">
-   <a href="patch_updates"><%=@label%></a>
+   <a href="patch_updates"><%=@update_label%></a>
 </div>	
 <br>
 <div id="status_health_icon">
