Singularize SessionsController to match Rails conventions

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -47,7 +47,7 @@
             <%= link_to _("Logout"), '/logout' %>
           <% end %>
          </div>
-        <% elsif  controller_name != "sessions" && controller_name != "webservices" -%>
+        <% elsif  controller_name != "session" && controller_name != "webservices" -%>
          <div id="login_session">
            <%= link_to _("Login"), '/logout' %>
          </div>
